# design-patterns

./: .codeclimate.yml  .gitignore  .pyup.yml  .travis.yml  LICENSE  README.md  abstract_factory.py  adapter.py  basic_backend.py  borg.py  bridge.py  builder.py  chain_of_responsability.py  closure.py  codecov.yml  command.py  composite.py  dataset_backend.py  decorator.py  facade.py  factory_method.py  flyweight.py  interpreter.py  iterator.py  mediator.py  memento.py  model_view_controller.py  mvc_exceptions.py  mvc_mock_objects.py  null_object.py  object_pool.py  observer.py  prototype.py  prototype_class_decorator.py  proxy.py  pyproject.toml  requirements.txt  singleton.py  sqlite_backend.py  state.py  (+4 more)
mvc/: basic_backend.py  dataset_backend.py  model_view_controller.py  mvc_exceptions.py  mvc_mock_objects.py  sqlite_backend.py
